# mqtt-bridge-mcp

./: LICENSE  README.md  llms.txt  pyproject.toml  server.json  server.py
tests/: test_server.py
