[project]
name = "mqtt-bridge-mcp"
version = "0.1.0"
description = "Bridge MQTT / IoT messaging to ONE OS — parse, map, govern device security (IEC 62443 / NIS2). CSOAI Layer-0 legacy-bridge family."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CSOAI-ORG"}]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]
[project.scripts]
mqtt-bridge-mcp = "server:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
